first comit branch carteTournante, img responsive cartable sur fon jaune

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <aside>
          
           <div class="container container-fluid">
-            <img   src="/img/boiteOutilMobile.jpg"
+            <img   src="/img/cartableOutilsAesh.webp"
             class="img-fluid imgTournante"
             alt="dessin d'un enfant en train d'écrire"" />
             <div class="caption">
