--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@
                     <img src="/img/cartableOutilsAesh.webp" class="img-fluid imgTournante"
                         alt="dessin d'un enfant en train d'écrire"" />
             <div class=" caption">
-                    <h3>Hover Style #5</h3>
-                    <p id="paragraphe">A wonderful serenity has taken possession of my entire soul, like these sweet
-                        mornings of spring which I enjoy with my whole heart.</p>
-                    <a id="linkCard" href="#">contact</a>
+                    <h3>Bienvenue!</h3>
+                    <p id="paragraphe">Découvrez sur notre site des trésors d'inclusion pédagogique pour vos élèves</p>
+                    <a id="linkCard" href="#">contacts</a>
                 </div>
                 </div>
                 </div>
