--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                 <article>
                     <div class="btnCenter">
-                        <button type="button" class="btn btn-secondary btn-lg">
+                        <button type="button" class="btn btn-secondary btn-lg" id="effetButtons">
                             ateliers
                         </button>
                     </div>
