changement apparence button font size

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       
                 <article>
                     <div class="btnCenter">
-                        <button type="button" class="btn btn-secondary btn-lg">
+                        <button type="button" class="btn btn-secondary btn-lg" id="effetButtons">
                            nos  évènments
                         </button>
                     </div>
