--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 </p>
                 <article>
                     <div class="btnCenter">
-                        <button type="button" class="btn btn-secondary btn-lg">
+                        <button type="button" class="btn btn-secondary btn-lg" id="effetButtons">
                             évènments
                         </button>
                     </div>
@@ -199,7 +199,7 @@
             </span>
             <article>
                 <div class="btnCenter btnMatieresEnseignees">
-                    <button type="button" class="btn btn-secondary btn-lg">
+                    <button type="button" class="btn btn-secondary btn-lg" id="effetButtons">
                         Ateliers français
                     </button>
                 </div>
@@ -207,7 +207,7 @@
 
             <article>
                 <div class="btnCenter">
-                    <button type="button" class="btn btn-secondary btn-lg">
+                    <button type="button" class="btn btn-secondary btn-lg" id="effetButtons">
                         Ateliers maths
                     </button>
                 </div>
