modif taille img box tournante"

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <aside>
 
                 <div class="container container-fluid">
-                    <img src="/img/cartableOutilsAesh.webp" class="img-fluid imgTournante"
+                    <img src="/img/cartableOutilsAesh-2.webp" class="img-fluid imgTournante"
                         alt="dessin d'un enfant en train d'écrire"" />
             <div class=" caption">
                     <h3>Bienvenue!</h3>
