modif befor : after buttons width and heigt

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <main>
         <div>
-            <img src="/img/banniere.png" class="img-fluid" id="banniereImg" alt="Responsive image" />
+            <img src="/img/banniere.webp" class="img-fluid" id="banniereImg" alt="Responsive image" />
 
             <h1>A.E.S.H</h1>
             <h2>La boite à outils</h2>
