modif index html balise googlefont link

--- a/index.html
+++ b/index.html
@@ -16,12 +16,18 @@
     <!--css footer-->
     <link rel="stylesheet" href="/footer.css" />
     <!-- google font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Koulen&display=swap"
-      rel="stylesheet"
-    />
+    <link 
+    rel="preconnect"
+    href="https://fonts.googleapis.com">
+    <link 
+    rel="preconnect" 
+    href="https://fonts.gstatic.com" 
+    crossorigin>
+    <link 
+    href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap" 
+    rel="stylesheet">
+
+    
     <!--font awesome cdn-->
     <link
       rel="stylesheet"
