modif index et css color

--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
     <main>
         <div>
             <img src="/img/banniere-1.webp" class="img-fluid" id="banniereImg" alt="Responsive image" />
-
-            <h1>A.E.S.H</h1>
+        </div>
+        <div>
+            <h1 id="H1Apostrophe">
+                <p id="apostrophe">L'</p> A.E.S.H
+            </h1>
+        </div>
+        <div>
             <h2>La boite à outils</h2>
         </div>
 
@@ -103,15 +108,16 @@
           Nos outils doivent aider les A..E.S.H. dans l'accompagnement scolaire
           des élèves en situation de handicap.
         </p> -->
-            <aside>
+            <aside class="cubicBezier">
 
                 <div class="container container-fluid">
                     <img src="/img/cartableOutilsAesh-2.webp" class="img-fluid imgTournante"
                         alt="dessin d'un enfant en train d'écrire"" />
             <div class=" caption">
                     <h3>Bienvenue!</h3>
-                    <p id="paragraphe">Découvrez sur notre site des trésors d'inclusion pédagogique pour vos élèves</p>
-                    <a id="linkCard" href="#">contacts</a>
+                    <p id="paragraphe">Découvrez des trésors d'inclusion pédagogique pour vos élèves
+                        <a id="linkCard" href="#">Participez !</a>
+                    </p>
                 </div>
                 </div>
                 </div>
@@ -125,25 +131,10 @@
                 mais aussi pour
                 l'ensemble de la classe!
 
-            
+
             </p>
 
-            <!-- <span class="white-space textAlignCenter">
-                <p>
 
-                    Nos
-
-
-                    <a href="">ateliers </a>
-                    et nos
-                    <a href="">évènments </a>
-                    se déroulent tout au long de l'année et
-                    <span class="important">
-                        dans toute la France.
-
-                    </span>
-                </p>
-            </span> -->
 
             <article>
                 <div class="btnCenter">
@@ -161,15 +152,12 @@
 
                     <span class="important">
 
-                        gratuitement
+                        gratuitement !
                     </span>
 
-                    depuis l'onglet
-
-                    <a href=" "> Ateliers </a> .
 
                 </p>
-            </span> 
+            </span>
             <article>
                 <div class="btnCenter ">
                     <button type="button" class="btn btn-secondary btn-lg effetButtons">
@@ -187,7 +175,7 @@
             </article>
 
             <span class="textAlignCenter">
-                Pour partager des astuces et des jeux sur le site:<a href="" class="noWrap">contactez-nous! </a>
+                Pour partager des astuces et des jeux sur le site:<a href="" class="noWrap">contactons-nous! </a>
             </span>
             <aside>
                 <img src="/img/math.webp" class="img-fluid" alt="dessin d'un enfant en train d'écrire" />
