--- a/index.html
+++ b/index.html
@@ -122,14 +122,22 @@
                 </div>
                 </div>
             </aside>
-            <p>
+            <p class="MargTParagraphe">
                 Une pédagogie pour
                 <span class="important">
-                    les élèves porteurs d'un handicap.
+                    les élèves porteurs d'un handicap
 
                 </span>
                 mais aussi pour
-                l'ensemble de la classe!
+                <span class="important">
+                
+                <strong>
+                    toute la classe!
+
+                </strong>
+
+
+                </span>
 
 
             </p>
