surligner contactons-nous

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div>
             <h1 id="H1Apostrophe">
-                <p id="apostrophe">L'</p> A.E.S.H
+                <p id="apostrophe">L'</p> A.E.S.H.
             </h1>
         </div>
         <div>
@@ -183,10 +183,10 @@
             </article>
 
             <span class="textAlignCenter">
-                Pour partager des astuces et des jeux sur le site:<a href="" class="noWrap">contactons-nous! </a>
+                Pour partager des astuces et des jeux sur le site:<a href="" class="noWrap important">contactons-nous! </a>
             </span>
             <aside>
-                <img src="/img/math.webp" class="img-fluid" alt="dessin d'un enfant en train d'écrire" />
+                <img src="/img/math.webp" class="img-fluid " id="MargTImage" alt="dessin d'un enfant en train d'apprendre à compter" />
             </aside>
         </section>
     </main>
@@ -194,8 +194,8 @@
     <!--footer-->
     <footer class="footer">
         <div class="footer-left col-md-4 col-sm-6">
-            <p class="about">
-                <span> Qui sommes-nous ? </span> association Loi 1901, nos bénévoles
+            <p class="about MargTParagraphe">
+                <span > Qui sommes-nous ? </span> association Loi 1901, nos bénévoles
                 ont tous reçu une formation à l'inclusion scolaire.
             </p>
             <div class="icons">
