--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
 
             <article>
                 <div class="btnCenter">
-                    <button type="button" class="btn btn-secondary btn-lg">
+                    <button type="button" class="btn btn-secondary btn-lg widthButton">
                         Rejoignez-nous
                     </button>
                 </div>
             </article>
 
-            <span class="textAlignCenter">
-                <p>
+            <span class="MargTparagraphe">
+                <p >
                     Les outils sont téléchargeables
 
 
@@ -182,8 +182,12 @@
                 </div>
             </article>
 
-            <span class="textAlignCenter">
-                Pour partager des astuces et des jeux sur le site:<a href="" class="noWrap important">contactons-nous! </a>
+            <span class="MargTParagraphe">
+                <div class="contactonsNous">
+
+                    Pour partager des astuces et des jeux sur le site:<a href="" class="noWrap  important">contactons-nous! </a>
+
+                </div>
             </span>
             <aside>
                 <img src="/img/math.webp" class="img-fluid " id="MargTImage" alt="dessin d'un enfant en train d'apprendre à compter" />
@@ -195,7 +199,7 @@
     <footer class="footer">
         <div class="footer-left col-md-4 col-sm-6">
             <p class="about MargTParagraphe">
-                <span > Qui sommes-nous ? </span> association Loi 1901, nos bénévoles
+                <span class="colorRed" > Qui sommes-nous ? </span> Association Loi 1901, nos bénévoles
                 ont tous reçu une formation à l'inclusion scolaire.
             </p>
             <div class="icons">
@@ -207,8 +211,8 @@
             </div>
         </div>
         <div class="footer-center col-md-4 col-sm-6">
-            <div></div>
-            <div>
+           
+            <div class="contactFooter">
                 <a href="/contact/index.html">
                     <i class="fa fa-envelope"></i>
                     <span class="contactFooter">Entrons en contact!</span>
