harmonie paragraphe balise about + miseEnFormeParagraphe

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
                 </div>
             </aside>
-            <p class="MargTParagraphe">
+            <p class="miseEnFormeParagraphe">
                 Une pédagogie pour
                 <span class="important">
                     les élèves porteurs d'un handicap
@@ -152,7 +152,7 @@
                 </div>
             </article>
 
-            <span class="MargTparagraphe">
+            <span class="miseEnFormeParagraphe">
                 <p >
                     Les outils sont téléchargeables
 
@@ -182,8 +182,8 @@
                 </div>
             </article>
 
-            <span class="MargTParagraphe">
-                <div class="contactonsNous">
+            <span id="miseEnFormeParagraphe">
+                <div class="">
 
                     Pour partager des astuces et des jeux sur le site:<a href="" class="noWrap  important">contactons-nous! </a>
 
@@ -198,7 +198,7 @@
     <!--footer-->
     <footer class="footer">
         <div class="footer-left col-md-4 col-sm-6">
-            <p class="about MargTParagraphe">
+            <p class="about">
                 <span class="colorRed" > Qui sommes-nous ? </span> Association Loi 1901, nos bénévoles
                 ont tous reçu une formation à l'inclusion scolaire.
             </p>
