--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <!--NavBar Bootstrap-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex fixed-top">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
@@ -210,6 +210,11 @@
                         class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
+        <div>
+            <h2 id="H1Apostrophe">
+                <p id="apostrophe">L'</p> A.E.S.H.
+            </h2>
+        </div>
         <div class="footer-center col-md-4 col-sm-6">
            
             <div class="contactFooter">
@@ -220,15 +225,13 @@
             </div>
         </div>
         <div class="footer-right col-md-4 col-sm-6">
-            <h2>A.E.S.H.</h2>
-            <p class="menu">
+         
+            <section class="menuFooter">
                 <a href="#"> Accueil</a> |
-                <a href="/AccueilElektropaints/index.html"> Ateliers</a> |
                 <a href="/accueilAkuarelles/index.html"> Français</a> |
                 <a href="/PageElektroPaints/index.html"> Mathématiques</a>|
                 <a href="#"> Evènements</a> |
-                <a href="/contact/index.html"> Contact</a>
-            </p>
+            </section>
             <!-- <p class="name"> Company Name &copy; 2016</p> -->
             Copyright &copy;
             <script>
