--- a/index.html
+++ b/index.html
@@ -230,15 +230,10 @@
                 <a href="#"> Accueil</a> |
                 <a href="/accueilAkuarelles/index.html"> Français</a> |
                 <a href="/PageElektroPaints/index.html"> Mathématiques</a>|
-                <a href="#"> Evènements</a> |
+                <a href="#"> Evènements</a> 
             </section>
             <!-- <p class="name"> Company Name &copy; 2016</p> -->
-            Copyright &copy;
-            <script>
-                document.write("2000 - " + new Date().getFullYear());
-            </script>
-            hélène Glaziou
-        </div>
+            
     </footer>
 
     <!--scripts bootstrap-->
