color apostrophe + COLOR CONTACT ICON

--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
             <div class="contactFooter">
                 <a href="/contact/index.html">
                     <i class="fa fa-envelope"></i>
-                    <span class="contactFooter">Entrons en contact!</span>
                 </a>
+                <span class="contactFooter">parlons-nous !</span>
+
             </div>
         </div>
         <div class="footer-right col-md-4 col-sm-6">
