modif contactons-nous center

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarTogglerDemo01">
-                    <a class="navbar-brand" href="#">
+                    <!-- <a class="navbar-brand" href="#">
                         <img src="/img/HandicapLogo.jpg" width="30" height="30" class="d-inline-block align-top"
                             alt="logo association A.E.S.H." />
 
                         A.E.S.H.
-                    </a>
+                    </a> -->
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="#"><span>Accueil</span>
@@ -183,9 +183,9 @@
             </article>
 
             <span id="miseEnFormeParagraphe">
-                <div class="">
+                <div class="textAlignCenter">
 
-                    Pour partager des astuces et des jeux sur le site:<a href="" class="noWrap  important">contactons-nous! </a>
+                    Pour plus d'astuces et de jeux:<a href="" class="noWrap  important">contactons-nous! </a>
 
                 </div>
             </span>
